--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@hocs/with-intersection-observer-props": "^0.5.0",
     "@types/p5": "^0.7.1",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
@@ -34,6 +35,7 @@
     "gatsby-transformer-remark": "2.1.11",
     "gatsby-transformer-sharp": "^2.1.8",
     "gsap": "^2.0.2",
+    "intersection-observer": "^0.5.1",
     "lodash": "^4.17.4",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.22.2",
