--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
     "@hocs/with-intersection-observer-props": "^0.5.0",
-    "@types/p5": "^0.7.1",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
-    "@types/rebass": "^0.3.2",
     "babel-plugin-styled-components": "^1.8.0",
     "gatsby": "2.0.40",
     "gatsby-image": "2.0.19",
@@ -55,6 +51,10 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
+    "@types/p5": "^0.7.1",
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
+    "@types/rebass": "^0.3.2",
     "@types/styled-components": "^4.0.3",
     "cli-glob": "^0.1.0",
     "eslint": "^5.8.0",
@@ -65,6 +65,7 @@
     "eslint-plugin-react": "^7.6.1",
     "gh-pages": "^2.0.1",
     "prettier": "^1.14.3",
+    "prettier-eslint": "^8.8.2",
     "remark-cli": "^6.0.0",
     "remark-preset-lint-recommended": "^3.0.1",
     "stylefmt": "^6.0.3",
@@ -85,7 +86,8 @@
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
-    "lint:js": "eslint --ext .js,.jsx .",
+    "lint": "eslint --ext .ts,.tsx .",
+    "lint:fix": "eslint --fix --ext .ts,.tsx .",
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write"
