--- a/package.json
+++ b/package.json
@@ -56,12 +56,15 @@
     "@types/react-dom": "^16.0.9",
     "@types/rebass": "^0.3.2",
     "@types/styled-components": "^4.0.3",
+    "@typescript-eslint/parser": "^1.6.0",
     "cli-glob": "^0.1.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-import": "^0.13.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.6.1",
     "gh-pages": "^2.0.1",
     "prettier": "^1.14.3",
