--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@types/p5": "^0.7.1",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
-    "@types/rebass": "^0.3.2",
+    "@types/react-helmet": "^5.0.8",
+    "@types/rebass": "^0.3.4",
     "@types/styled-components": "^4.0.3",
     "@typescript-eslint/parser": "^1.6.0",
     "cli-glob": "^0.1.0",
