--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.123",
     "@types/p5": "^0.7.1",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
