Implement simple i18next

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "gatsby-transformer-remark": "2.1.11",
     "gatsby-transformer-sharp": "^2.1.8",
     "gsap": "^2.0.2",
+    "i18next": "^15.0.9",
+    "i18next-browser-languagedetector": "^3.0.1",
+    "i18next-xhr-backend": "^2.0.1",
     "intersection-observer": "^0.5.1",
     "lodash": "^4.17.4",
     "lodash.throttle": "^4.1.1",
@@ -41,6 +44,7 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.7.0-alpha.2",
     "react-helmet": "^5.2.0",
+    "react-i18next": "^10.6.1",
     "react-p5-wrapper": "0.0.4",
     "react-share": "^2.0.0",
     "react-spring": "^6.1.8",
@@ -56,6 +60,7 @@
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-i18next": "^8.1.0",
     "@types/rebass": "^0.3.4",
     "@types/styled-components": "^4.0.3",
     "@typescript-eslint/parser": "^1.6.0",
