--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
     "@hocs/with-intersection-observer-props": "^0.5.0",
+    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/tag": "^0.20.3",
+    "@wapps/gatsby-plugin-i18next": "^1.1.3",
     "babel-plugin-styled-components": "^1.8.0",
     "gatsby": "2.0.40",
     "gatsby-image": "2.0.19",
+    "gatsby-mdx": "^0.4.4",
     "gatsby-plugin-catch-links": "2.0.6",
     "gatsby-plugin-feed": "2.0.9",
     "gatsby-plugin-google-analytics": "2.0.7",
     "gatsby-plugin-lodash": "3.0.2",
     "gatsby-plugin-manifest": "2.0.7",
+    "gatsby-plugin-mdx": "^1.0.1",
     "gatsby-plugin-nprogress": "2.0.6",
     "gatsby-plugin-offline": "2.0.12",
     "gatsby-plugin-react-helmet": "3.0.1",
