--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@mdx-js/mdx": "^0.20.3",
     "@mdx-js/tag": "^0.20.3",
     "@wapps/gatsby-plugin-i18next": "^1.1.3",
+    "@xstate/react": "^0.2.0",
+    "animejs": "^3.0.1",
     "babel-plugin-styled-components": "^1.8.0",
+    "constate": "^1.0.0",
     "gatsby": "2.0.40",
     "gatsby-image": "2.0.19",
     "gatsby-mdx": "^0.4.4",
@@ -24,7 +27,6 @@
     "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-sitemap": "2.0.2",
     "gatsby-plugin-styled-components": "^3.0.1",
-    "gatsby-plugin-transition-link": "^1.1.1",
     "gatsby-plugin-twitter": "2.0.7",
     "gatsby-plugin-typescript": "^2.0.1",
     "gatsby-remark-autolink-headers": "2.0.10",
@@ -45,19 +47,20 @@
     "moment": "^2.22.2",
     "p5": "^0.7.2",
     "prismjs": "^1.15.0",
-    "react": "^16.7.0-alpha.2",
+    "react": "^16.8.6",
     "react-disqus-comments": "^1.4.0",
-    "react-dom": "^16.7.0-alpha.2",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-i18next": "^10.6.1",
     "react-p5-wrapper": "0.0.4",
     "react-share": "^2.0.0",
-    "react-spring": "^6.1.8",
+    "react-spring": "^8.0.19",
     "react-twitter-widgets": "^1.7.1",
     "rebass": "^3.0.0-11",
     "styled-components": "^4.0.3",
     "typeface-spectral": "0.0.54",
-    "url-join": "^4.0.0"
+    "url-join": "^4.0.0",
+    "xstate": "^4.4.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.123",
