--- a/package.json
+++ b/package.json
@@ -108,7 +108,8 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx .",
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
-    "format:js": "prettier '**/*.{js,jsx}' --write"
+    "format:js": "prettier '**/*.{js,jsx}' --write",
+    "now-build": "npm run build"
   },
   "remarkConfig": {
     "plugins": [
