Clean up and add custom slider

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hocs/with-intersection-observer-props": "^0.5.0",
     "@mdx-js/mdx": "^0.20.3",
     "@mdx-js/tag": "^0.20.3",
+    "@types/hammerjs": "^2.0.36",
     "@wapps/gatsby-plugin-i18next": "^1.1.3",
     "@xstate/react": "^0.2.0",
     "animejs": "^3.0.1",
@@ -38,6 +39,7 @@
     "gatsby-transformer-remark": "2.1.11",
     "gatsby-transformer-sharp": "^2.1.8",
     "gsap": "^2.0.2",
+    "hammerjs": "^2.0.8",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
