Update and clean dependencies. Fix build.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "gatsby-starter-advanced",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
+  "name": "simonhalimonov-portfolio",
+  "description": "Personal GatsbyJs portfolio",
   "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "author": "Simon Halimonov <hello@simonhalimonov.de>",
   "dependencies": {
     "@glidejs/glide": "^3.3.0",
-    "@hocs/with-intersection-observer-props": "^0.5.0",
     "@mdx-js/mdx": "^0.20.3",
     "@mdx-js/tag": "^0.20.3",
     "@types/hammerjs": "^2.0.36",
     "@wapps/gatsby-plugin-i18next": "^1.1.3",
     "@xstate/react": "^0.2.0",
-    "animejs": "^3.0.1",
-    "babel-plugin-styled-components": "^1.8.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "constate": "^1.0.0",
     "gatsby": "2.0.40",
     "gatsby-image": "2.0.19",
@@ -20,7 +18,6 @@
     "gatsby-plugin-catch-links": "2.0.6",
     "gatsby-plugin-feed": "2.0.9",
     "gatsby-plugin-google-analytics": "2.0.7",
-    "gatsby-plugin-lodash": "3.0.2",
     "gatsby-plugin-manifest": "2.0.7",
     "gatsby-plugin-mdx": "^1.0.1",
     "gatsby-plugin-nprogress": "2.0.6",
@@ -28,7 +25,7 @@
     "gatsby-plugin-react-helmet": "3.0.1",
     "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-sitemap": "2.0.2",
-    "gatsby-plugin-styled-components": "^3.0.1",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-twitter": "2.0.7",
     "gatsby-plugin-typescript": "^2.0.1",
     "gatsby-remark-autolink-headers": "2.0.10",
@@ -39,7 +36,6 @@
     "gatsby-source-filesystem": "2.0.7",
     "gatsby-transformer-remark": "2.1.11",
     "gatsby-transformer-sharp": "^2.1.8",
-    "gsap": "^2.0.2",
     "hammerjs": "^2.0.8",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
@@ -51,14 +47,12 @@
     "p5": "^0.7.2",
     "prismjs": "^1.15.0",
     "react": "^16.8.6",
-    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-i18next": "^10.6.1",
     "react-p5-wrapper": "0.0.4",
     "react-share": "^2.0.0",
     "react-spring": "^8.0.19",
-    "react-twitter-widgets": "^1.7.1",
     "rebass": "^3.0.0-11",
     "styled-components": "^4.0.3",
     "typeface-spectral": "0.0.54",
@@ -84,7 +78,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.6.1",
-    "gh-pages": "^2.0.1",
     "prettier": "^1.14.3",
     "prettier-eslint": "^8.8.2",
     "remark-cli": "^6.0.0",
@@ -101,18 +94,17 @@
   "main": "n/a",
   "scripts": {
     "develop": "gatsby develop",
-    "dev": "npm run develop",
+    "dev": "yarn develop",
     "serve": "gatsby serve",
     "build": "gatsby build",
-    "build:pp": "gatsby build --prefix-paths",
-    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
+    "build:serve": "gatsby build && gatsby serve",
     "clean": "rm -rf public && rm -rf .cache",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --fix --ext .ts,.tsx .",
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
-    "now-build": "npm run build"
+    "now-build": "yarn build"
   },
   "remarkConfig": {
     "plugins": [
