--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-i18next": "^10.6.1",
     "react-p5-wrapper": "0.0.4",
     "react-spring": "^8.0.19",
+    "react-syntax-highlighter": "^11.0.2",
     "rebass": "^3.0.0-11",
     "styled-components": "^4.0.3",
     "typeface-spectral": "0.0.54",
@@ -77,6 +78,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.6.1",
+    "gatsby-source-trello": "^1.0.9",
     "prettier": "^1.14.3",
     "prettier-eslint": "^8.8.2",
     "remark-cli": "^6.0.0",
