--- a/now.json
+++ b/now.json
@@ -21,6 +21,6 @@
   },
   "regions": ["bru1", "sin1"],
   "env": {
-    "GOOGLE_ANALYTICS_TRACKING_ID": "@portfolio-google-analytics-tracking-id"
+    "GOOGLE_ANALYTICS_TRACKING_ID": "@p-ga-id"
   }
 }
