--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@xstate/react": "^0.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "constate": "^1.0.0",
+    "framer-motion": "^1.2.4",
     "gatsby": "2.0.40",
     "gatsby-image": "2.0.19",
     "gatsby-mdx": "^0.4.4",
@@ -54,6 +55,7 @@
     "react-spring": "^8.0.19",
     "rebass": "^3.0.0-11",
     "styled-components": "^4.0.3",
+    "styled-system": "^5.0.15",
     "typeface-spectral": "0.0.54",
     "url-join": "^4.0.0",
     "xstate": "^4.4.0"
