Add Facebook pixel

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-image": "2.0.19",
     "gatsby-mdx": "^0.4.4",
     "gatsby-plugin-catch-links": "2.0.6",
+    "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-feed": "2.0.9",
     "gatsby-plugin-google-analytics": "2.0.7",
     "gatsby-plugin-manifest": "2.0.7",
