--- a/package.json
+++ b/package.json
@@ -1,117 +1,114 @@
 {
-  "name": "simonhalimonov-portfolio",
-  "description": "Personal GatsbyJs portfolio",
-  "version": "1.1.0",
-  "author": "Simon Halimonov <hello@simonhalimonov.de>",
-  "dependencies": {
-    "@glidejs/glide": "^3.3.0",
-    "@mdx-js/mdx": "^0.20.3",
-    "@mdx-js/tag": "^0.20.3",
-    "@types/hammerjs": "^2.0.36",
-    "@wapps/gatsby-plugin-i18next": "^1.1.3",
-    "@xstate/react": "^0.2.0",
-    "babel-plugin-styled-components": "^1.10.6",
-    "constate": "^1.0.0",
-    "framer-motion": "^1.2.4",
-    "gatsby": "2.0.40",
-    "gatsby-image": "2.0.19",
-    "gatsby-mdx": "^0.4.4",
-    "gatsby-plugin-catch-links": "2.0.6",
-    "gatsby-plugin-facebook-pixel": "^1.0.3",
-    "gatsby-plugin-feed": "2.0.9",
-    "gatsby-plugin-google-analytics": "2.0.7",
-    "gatsby-plugin-manifest": "2.0.7",
-    "gatsby-plugin-mdx": "^1.0.1",
-    "gatsby-plugin-nprogress": "2.0.6",
-    "gatsby-plugin-offline": "2.0.12",
-    "gatsby-plugin-react-helmet": "3.0.1",
-    "gatsby-plugin-sharp": "^2.0.12",
-    "gatsby-plugin-sitemap": "2.0.2",
-    "gatsby-plugin-styled-components": "^3.1.2",
-    "gatsby-plugin-twitter": "2.0.7",
-    "gatsby-plugin-typescript": "^2.0.1",
-    "gatsby-remark-autolink-headers": "2.0.10",
-    "gatsby-remark-copy-linked-files": "2.0.6",
-    "gatsby-remark-images": "2.0.6",
-    "gatsby-remark-prismjs": "3.0.3",
-    "gatsby-remark-responsive-iframe": "2.0.6",
-    "gatsby-source-filesystem": "2.0.7",
-    "gatsby-transformer-remark": "2.1.11",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "hammerjs": "^2.0.8",
-    "i18next": "^15.0.9",
-    "i18next-browser-languagedetector": "^3.0.1",
-    "i18next-xhr-backend": "^2.0.1",
-    "intersection-observer": "^0.5.1",
-    "lodash": "^4.17.4",
-    "lodash.throttle": "^4.1.1",
-    "moment": "^2.22.2",
-    "p5": "^0.7.2",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-i18next": "^10.6.1",
-    "react-p5-wrapper": "0.0.4",
-    "react-spring": "^8.0.19",
-    "rebass": "^3.0.0-11",
-    "styled-components": "^4.0.3",
-    "styled-system": "^5.0.15",
-    "typeface-spectral": "0.0.54",
-    "url-join": "^4.0.0",
-    "xstate": "^4.4.0"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.123",
-    "@types/p5": "^0.7.1",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-helmet": "^5.0.8",
-    "@types/react-i18next": "^8.1.0",
-    "@types/rebass": "^0.3.4",
-    "@types/styled-components": "^4.0.3",
-    "@typescript-eslint/parser": "^1.6.0",
-    "cli-glob": "^0.1.0",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-import": "^0.13.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.6.1",
-    "prettier": "^1.14.3",
-    "prettier-eslint": "^8.8.2",
-    "remark-cli": "^6.0.0",
-    "remark-preset-lint-recommended": "^3.0.1",
-    "stylefmt": "^6.0.3",
-    "stylelint": "^9.7.1",
-    "stylelint-config-standard": "^18.0.0",
-    "write-good": "^0.13.1"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "scripts": {
-    "develop": "gatsby develop",
-    "dev": "yarn develop",
-    "serve": "gatsby serve",
-    "build": "gatsby build",
-    "build:serve": "gatsby build && gatsby serve",
-    "clean": "rm -rf public && rm -rf .cache",
-    "lint": "eslint --ext .ts,.tsx .",
-    "lint:fix": "eslint --fix --ext .ts,.tsx .",
-    "lint:md": "remark content/posts/",
-    "write-good": "write-good $(glob 'content/posts/**/*.md')",
-    "format:js": "prettier '**/*.{js,jsx}' --write",
-    "now-build": "yarn build",
-    "deploy:production": "now --target production"
-  },
-  "remarkConfig": {
-    "plugins": [
-      "remark-preset-lint-recommended"
-    ]
-  }
+	"name": "simonhalimonov-portfolio",
+	"description": "Personal GatsbyJs portfolio",
+	"version": "1.1.0",
+	"author": "Simon Halimonov <hello@simonhalimonov.de>",
+	"dependencies": {
+		"@glidejs/glide": "^3.3.0",
+		"@mdx-js/mdx": "^0.20.3",
+		"@mdx-js/tag": "^0.20.3",
+		"@xstate/react": "^0.2.0",
+		"babel-plugin-styled-components": "^1.10.6",
+		"constate": "^1.0.0",
+		"framer-motion": "^1.2.4",
+		"gatsby": "^2.15.20",
+		"gatsby-image": "2.0.19",
+		"gatsby-mdx": "^0.4.4",
+		"gatsby-plugin-catch-links": "2.0.6",
+		"gatsby-plugin-facebook-pixel": "^1.0.3",
+		"gatsby-plugin-feed": "2.0.9",
+		"gatsby-plugin-google-analytics": "2.0.7",
+		"gatsby-plugin-manifest": "^2.2.18",
+		"gatsby-plugin-mdx": "^1.0.1",
+		"gatsby-plugin-nprogress": "2.0.6",
+		"gatsby-plugin-offline": "2.0.12",
+		"gatsby-plugin-react-helmet": "3.0.1",
+		"gatsby-plugin-sharp": "^2.0.12",
+		"gatsby-plugin-sitemap": "2.0.2",
+		"gatsby-plugin-styled-components": "^3.1.2",
+		"gatsby-plugin-twitter": "2.0.7",
+		"gatsby-plugin-typescript": "^2.0.1",
+		"gatsby-remark-autolink-headers": "2.0.10",
+		"gatsby-remark-copy-linked-files": "2.0.6",
+		"gatsby-remark-images": "2.0.6",
+		"gatsby-remark-prismjs": "3.0.3",
+		"gatsby-remark-responsive-iframe": "2.0.6",
+		"gatsby-source-filesystem": "2.0.7",
+		"gatsby-transformer-remark": "2.1.11",
+		"gatsby-transformer-sharp": "^2.1.8",
+		"i18next": "^15.0.9",
+		"i18next-browser-languagedetector": "^3.0.1",
+		"i18next-xhr-backend": "^2.0.1",
+		"intersection-observer": "^0.5.1",
+		"lodash": "^4.17.4",
+		"lodash.throttle": "^4.1.1",
+		"moment": "^2.22.2",
+		"p5": "^0.7.2",
+		"prismjs": "^1.15.0",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-helmet": "^5.2.0",
+		"react-i18next": "^10.6.1",
+		"react-p5-wrapper": "0.0.4",
+		"react-spring": "^8.0.19",
+		"rebass": "^3.0.0-11",
+		"styled-components": "^4.0.3",
+		"styled-system": "^5.0.15",
+		"typeface-spectral": "0.0.54",
+		"url-join": "^4.0.0",
+		"xstate": "^4.4.0"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.14.123",
+		"@types/p5": "^0.7.1",
+		"@types/react": "^16.7.6",
+		"@types/react-dom": "^16.0.9",
+		"@types/react-helmet": "^5.0.8",
+		"@types/react-i18next": "^8.1.0",
+		"@types/rebass": "^0.3.4",
+		"@types/styled-components": "^4.0.3",
+		"@typescript-eslint/parser": "^1.6.0",
+		"cli-glob": "^0.1.0",
+		"eslint": "^5.8.0",
+		"eslint-config-airbnb": "^17.1.0",
+		"eslint-config-import": "^0.13.0",
+		"eslint-config-prettier": "^3.1.0",
+		"eslint-plugin-import": "^2.8.0",
+		"eslint-plugin-jsx-a11y": "^6.1.2",
+		"eslint-plugin-prettier": "^3.0.1",
+		"eslint-plugin-react": "^7.6.1",
+		"prettier": "^1.14.3",
+		"prettier-eslint": "^8.8.2",
+		"remark-cli": "^6.0.0",
+		"remark-preset-lint-recommended": "^3.0.1",
+		"stylefmt": "^6.0.3",
+		"stylelint": "^9.7.1",
+		"stylelint-config-standard": "^18.0.0",
+		"write-good": "^0.13.1"
+	},
+	"keywords": [
+		"gatsby"
+	],
+	"license": "MIT",
+	"main": "n/a",
+	"scripts": {
+		"develop": "gatsby develop",
+		"dev": "yarn develop",
+		"serve": "gatsby serve",
+		"build": "gatsby build",
+		"build:serve": "gatsby build && gatsby serve",
+		"clean": "rm -rf public && rm -rf .cache",
+		"lint": "eslint --ext .ts,.tsx .",
+		"lint:fix": "eslint --fix --ext .ts,.tsx .",
+		"lint:md": "remark content/posts/",
+		"write-good": "write-good $(glob 'content/posts/**/*.md')",
+		"format:js": "prettier '**/*.{js,jsx}' --write",
+		"now-build": "yarn build",
+		"deploy:production": "now --target production"
+	},
+	"remarkConfig": {
+		"plugins": [
+			"remark-preset-lint-recommended"
+		]
+	}
 }
