Feature: Notes Pages

--- a/package.json
+++ b/package.json
@@ -5,36 +5,36 @@
 	"author": "Simon Halimonov <hello@simonhalimonov.de>",
 	"dependencies": {
 		"@glidejs/glide": "^3.3.0",
-		"@mdx-js/mdx": "^0.20.3",
+		"@mdx-js/mdx": "^1.5.0",
+		"@mdx-js/react": "^1.5.0",
 		"@mdx-js/tag": "^0.20.3",
 		"@sindresorhus/slugify": "^0.9.1",
 		"@xstate/react": "^0.2.0",
 		"babel-plugin-styled-components": "^1.10.6",
 		"constate": "^1.0.0",
 		"framer-motion": "^1.2.4",
-		"gatsby": "^2.15.20",
+		"gatsby": "^2.15.28",
 		"gatsby-image": "2.0.19",
-		"gatsby-mdx": "^0.4.4",
+		"gatsby-mdx": "^1.0.0",
 		"gatsby-plugin-catch-links": "2.0.6",
-		"gatsby-plugin-facebook-pixel": "^1.0.3",
 		"gatsby-plugin-feed": "2.0.9",
 		"gatsby-plugin-google-analytics": "2.0.7",
 		"gatsby-plugin-manifest": "^2.2.18",
-		"gatsby-plugin-mdx": "^1.0.1",
+		"gatsby-plugin-mdx": "^1.0.46",
 		"gatsby-plugin-nprogress": "2.0.6",
 		"gatsby-plugin-offline": "2.0.12",
 		"gatsby-plugin-react-helmet": "3.0.1",
-		"gatsby-plugin-sharp": "^2.0.12",
+		"gatsby-plugin-sharp": "^2.2.27",
 		"gatsby-plugin-sitemap": "2.0.2",
 		"gatsby-plugin-styled-components": "^3.1.2",
 		"gatsby-plugin-twitter": "2.0.7",
 		"gatsby-plugin-typescript": "^2.0.1",
 		"gatsby-remark-autolink-headers": "2.0.10",
-		"gatsby-remark-copy-linked-files": "2.0.6",
-		"gatsby-remark-images": "2.0.6",
+		"gatsby-remark-copy-linked-files": "^2.1.23",
+		"gatsby-remark-images": "^3.1.25",
 		"gatsby-remark-prismjs": "3.0.3",
 		"gatsby-remark-responsive-iframe": "2.0.6",
-		"gatsby-source-filesystem": "2.0.7",
+		"gatsby-source-filesystem": "^2.1.28",
 		"gatsby-transformer-remark": "2.1.11",
 		"gatsby-transformer-sharp": "^2.1.8",
 		"i18next": "^15.0.9",
@@ -51,7 +51,6 @@
 		"react-helmet": "^5.2.0",
 		"react-i18next": "^10.6.1",
 		"react-p5-wrapper": "0.0.4",
-		"react-spring": "^8.0.19",
 		"rebass": "^3.0.0-11",
 		"styled-components": "^4.0.3",
 		"styled-system": "^5.0.15",
@@ -94,6 +93,7 @@
 	"license": "MIT",
 	"main": "n/a",
 	"scripts": {
+		"d": "gatsby develop -H 0.0.0.0 -o",
 		"develop": "gatsby develop",
 		"dev": "yarn develop",
 		"serve": "gatsby serve",
