--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"gatsby-mdx": "^1.0.0",
 		"gatsby-plugin-catch-links": "2.0.6",
 		"gatsby-plugin-feed": "2.0.9",
-		"gatsby-plugin-google-analytics": "2.0.7",
+		"gatsby-plugin-google-analytics": "^2.1.21",
 		"gatsby-plugin-manifest": "^2.2.18",
 		"gatsby-plugin-mdx": "^1.0.46",
 		"gatsby-plugin-nprogress": "2.0.6",
